# LA1-Projeto

./: .gitignore  Backlog.txt  Constituintes do Grupo  README.md  Resumo.txt  Screen-shots.txt  dados.h  interpretador.c
Rastros/: .gitignore  CMakeLists.txt  Doxyfile  dados.c  dados.h  grupo.txt  interface.c  interface.h  logica.c  logica.h  main.c
Rastros/dados/: inicializa_estado.c  inicializa_estado.h  inicializar_estado.c  inicializar_estado.h  lista.c  lista.h  muda_dados.c  muda_dados.h  muda_estado.c  muda_estado.h  obter_dados.c  obter_dados.h  obter_dados_estado.c  retoma_estado.c  retoma_estado.h
Rastros/html/: classes.html  dados_8h.html  dados_8h_source.html  dir_6ea6a6918393993a6a2c0f40fca09e95.html  dir_b31d54d5631803016a26f28213a41162.html  dir_dad9382648e46fed49a0fd0ec0acdc29.html  dir_eb8800cb0c3fd4fa9d40306d6b83386d.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  grava__jogo_8h.html  grava__jogo_8h_source.html  gravar__ler__jogo_8h.html  gravar__ler__jogo_8h_source.html  inicializa__estado_8h.html  inicializa__estado_8h_source.html  inicializar__estado_8h.html  inicializar__estado_8h_source.html  interface_8h.html  interface_8h_source.html  interpretador_8h.html  interpretador_8h_source.html  jog_8h.html  jog_8h_source.html  jogar_8h.html  jogar_8h_source.html  ler__jogo_8h.html  ler__jogo_8h_source.html  lista_8h.html  lista_8h_source.html  logica_8h.html  logica_8h_source.html  main__teste_8h.html  main__teste_8h_source.html  menudata.js  mostra_8h.html  (+40 more)
Rastros/interface/: grava_jogo.c  interpretador.c  interpretador.h  mostra.c  mostra.h  mostra_movimentos.c  mostra_movimentos.h  mostra_tabuleiro.c  mostra_tabuleiro.h  mostra_vencedor.c  mostra_vencedor.h  prompt.c  prompt.h  retoma_jogo.c
Rastros/latex/: dados_8h.tex  files.tex  grava__jogo_8h.tex  gravar__ler__jogo_8h.tex  inicializa__estado_8h.tex  inicializar__estado_8h.tex  interface_8h.tex  interpretador_8h.tex  jog_8h.tex  jogar_8h.tex  ler__jogo_8h.tex  logica_8h.tex  main__teste_8h.tex  mostra_8h.tex  mostra__movimentos_8h.tex  mostra__tabuleiro_8h.tex  muda__dados_8h.tex  muda__estado_8h.tex  obter__dados_8h.tex  obter__dados__estado_8h.tex  pos_8h.tex  prompt_8h.tex  refman.tex  retoma__estado_8h.tex  retoma__jogo_8h.tex  structCOORDENADA.tex  structESTADO.tex  structJOGADA.tex  testa__estado_8h.tex  testa__jog_8h.tex  testa__jogar_8h.tex  testa__pos_8h.tex  testa__vencedor_8h.tex  teste_8h.tex  testes_8h.tex  verifica__vencedor_8h.tex
Rastros/logica/: grava_jogo.c  grava_jogo.h  gravar_ler_jogo.c  gravar_ler_jogo.h  jog.c  jog.h  jogar.c  jogar.h  ler_jogo.c  ler_jogo.h  pos.c  pos.h  pos_jogada.c  pos_jogada.h  retoma_jogo.c  retoma_jogo.h  verifica_vencedor.c  verifica_vencedor.h
Rastros/testes/: main_teste.c  main_teste.h  testa_estado.c  testa_estado.h  testa_jog.c  testa_jog.h  testa_jogar.c  testa_jogar.h  testa_pos.c  testa_pos.h  testa_vencedor.c  testa_vencedor.h  teste.c  teste.h  testes.c  testes.h
bot/: CMakeLists.txt  Doxyfile  escolher_jogada.c  escolher_jogada.h  gravar_jogo.c  gravar_jogo.h  inicializar_estado.h  jog.c  jog.h  jogar.c  jogar.h  ler_jogo.h  lista.h  main.c  mudar_estado.c  mudar_estado.h  obter_dados_estado.c  obter_dados_estado.h
projeto/: CMakeLists.txt  Doxyfile  main.c
projeto/dados/: inicializa_estado.c  inicializa_estado.h  inicializar_estado.c  inicializar_estado.h  lista.h  muda_estado.c  muda_estado.h  mudar_estado.c  mudar_estado.h  obter_dados_estado.c  obter_dados_estado.h
projeto/interface/: interpretador.c  interpretador.h  mostrar.c  mostrar.h  prompt.c  prompt.h
projeto/logica/: comando_jog.c  comando_jog.h  comando_pos.c  comando_pos.h  fazer_jogada.c  fazer_jogada.h  fim_jogo.c  fim_jogo.h  ler_jogo.c  ler_jogo.h
projeto/testes/: main_teste.c  main_teste.h  testa_estado.c  testa_jog.c  (+17 more)
(+790 files in other folders)
